--- a/package.json
+++ b/package.json
@@ -41,5 +41,10 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.16",
+    "daisyui": "^5.3.10",
+    "tailwindcss": "^4.1.16"
   }
 }
